--- a/client/src/styles.goblal.css
+++ b/client/src/styles.goblal.css
@@ -1,11 +1,19 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  /* max-width: 1280px; */
+  /* margin: 0 auto; */
+  /* padding: 2rem; */
+  /* text-align: center; */
 }
 
-.logo {
+/* button, .MuiButtonBase-root{
+  background-color: #ad3cdd;
+} */
+
+/* body{
+  background-color: #678062;
+} */
+
+/* .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
@@ -39,4 +47,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
