--- a/client/src/styles.goblal.css
+++ b/client/src/styles.goblal.css
@@ -1,3 +1,11 @@
 * {
   margin: 0;
 }
+.css-h4y409-MuiList-root {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  padding-top: 0px !important;
+  padding-bottom: 0px !important;
+}
